FIX: coming soon border radius broken on safari

--- a/client/src/TokenSelector/TokenSelector.module.scss
+++ b/client/src/TokenSelector/TokenSelector.module.scss
@@ -25,6 +25,7 @@
   font-size: 14px !important;
   font-weight:500 !important;
   background: rgba(255,255,255,.8) !important;
+  border-radius: 2rem !important;
   z-index: 1 !important;
   transition:opacity 0.2s ease-in-out;
   &:hover{
